--- a/molvec_lib/ver1.0/example/README
+++ b/molvec_lib/ver1.0/example/README
@@ -1,7 +1,11 @@
-When you run, you first need to run the following commands. 
+When you run, you first need to mak sure you have the following packages or something equivarent. 
 
-module load intel/19.1.2
-module load openmpi/intel/4.1.1
+tested environments
+|----------------------|
+|intel/19.1.2          |
+|----------------------|
+|openmpi/intel/4.1.1   |
+|----------------------|
 make
 
 Then before you run make sure you have the right weight file. If you use urea example copy weight_urea.txt as weight.txt. If you use nicotinamide, copy weight_nicotinamide.txt as weight.txt
